# willay

./: .coveragerc  .gitignore  .gitlab-ci.yml  LICENSE  README.md  manage.py  pyproject.toml  setup.cfg
config/: urls.py  wsgi.py
config/settings/: base.py  prod.py  test.py
requirements/: base.txt
willay/claims/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
willay/claims/migrations/: 0001_initial.py  0002_claim_verified.py  0003_category_marker_icon.py
willay/claims/tests/: test_forms.py  test_views.py
willay/common/: utils.py
willay/static/js/: claim-create-map.js  claim-detail-map.js  claims-map.js
willay/templates/: base.html  home.html
willay/templates/claims/: claim_create.html  claim_detail.html  claim_list.html  export.html  map.html
willay/users/: urls.py
willay/users/migrations/: 0001_initial.py
willay/users/tests/: test_models.py
