[tool.poetry]
name = "willay"
version = "0.1.0"
description = ""
authors = ["Erick Navarro <erick@navarro.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Django = "2.0.5"
psycopg2 = "2.7.3.2"
django-crispy-forms = "1.7.0"
django-model-utils = "3.1.1"
python-dateutil = "2.6.1"
django-filter = "1.1.0"
django-allauth = "0.35.0"
Pillow = "5.1.0"
django-minio-storage = "0.2.1"
gunicorn = "19.7.1"
raven = "6.5.0"

[tool.poetry.dev-dependencies]
flake8 = "3.5.0"
pep8-naming = "0.5.0"
mixer = "6.0.1"
isort = "^4.3.21"
black = "^19.10b0"
pytest = "^5.4.1"
pytest-django = "^3.9.0"
pytest-coverage = "^0.0"

[tool.black]
py36 = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
